fix document chooser image overflow

--- a/src/styles/document-view-chooser.css
+++ b/src/styles/document-view-chooser.css
@@ -12,12 +12,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .document-view-chooser-choice {
   padding: 10px;
   border: 2px solid #767676;
   max-width: 20em;
+  margin-bottom: 2em;
 }
 
 .document-view-chooser-choice:hover {
